syntax="proto3";
package addressbook;

message Person {
    enum PhoneType {
        MOBILE = 0;
        HOME = 1;
        WORK = 2;
    }

    message PhoneNumber {
        string number = 1;
        PhoneType type = 2;
    }

    string first_name = 1;
    string last_name = 2;
    repeated PhoneNumber phones = 4;
}

message AddPersonResponse {
    bool success = 1;
    string message = 2;
}

message ListAddressBookRequest {
}

message ListAddressBookResponse {
    bool success = 1;
    repeated Person persons = 2;
}

service AddressBook {
    rpc AddPerson (Person) returns (AddPersonResponse);
    rpc ListAddressBook (ListAddressBookRequest) returns (ListAddressBookResponse);
}
